--- a/src/templates/boilerplate.html
+++ b/src/templates/boilerplate.html
@@ -6,6 +6,10 @@
 
     <script language="javascript" src="/static/js/jquery-1.8.1.min.js" ></script>
     <link rel="stylesheet" type="text/css" href="/static/css/autolog.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+    {% block header_extra %}
+    {% endblock %}
 </head>
 <body>
     {% block content %}
