--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,80 +3,55 @@
 {% block content %}
 <h1>{{title}}</h1>
 
-<div id="logs">
+<div class="copyright">
+    作者<a href="mailto:trent.zhou@qq.com">Trent Zhou</a>。
+    开放<a href="https://github.com/trentzhou/autolog">源代码</a>。
 </div>
 
-<script language="javascript">
-function show_logs(logs) {
-    for (var i in logs) {
-        var log = logs[i];
-        var date = log['date'];
-        var weekday = log['weekday']
-        var weekday_str = ["一", "二", "三", "四", "五", "六", "天"][weekday - 1];
+<div id="logs">
+    {% for log in logs %}
+    <div class="log weekday-{{log['weekday']}}">
+        <div class="log_date section">{{log['date']}} {{log['weekday_text']}}</div>
+        {% if log['weather'] %}
+        <div class="weather section">
+            <span class="weather_city">{{log['weather']['city']}}</span>
+            <span style="color:{{log['weather']['pm25_color']}}">
+                {{log['weather']['condition']}}
+                空气质量指数{{log['weather']['pm25']}}
+            </span>
+            {{log['weather']['wind']}} {{log['weather']['temperature']}}
+        </div>
+        {% endif %}
 
-        var log_div = $('<div class="log weekday-' + weekday + '"></div>');
-        var date_div = $('<div class="log_date section">' + date + " 星期" + weekday_str + '</div>')
-        var weather_div = $('<div class="weather section"></div>')
-        var news_div = $('<div class="news section"> </div>')
-        var log_items_div = $('<div class="log_items section"></div>')
+        {% if log['news'] %}
+        <div class="news section">
+            <div class="subtitle">
+                <a href="{{log['news']['link']}}" target="_blank">
+                    来自喷嚏图卦的新闻
+                </a>
+            </div>
+            {% if log['news']['titles'] %}
+            <ul>
+                {% for title in log['news']['titles'] %}
+                <li>{{title}}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+        {% endif %}
 
+        {% if log['logs'] %}
+        <div class="logs section">
+            <div class="subtitle">我的记录</div>
+            <ul>
+                {% for msg in log['logs'] %}
+                <li>{{msg}}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+    </div>
+    {% endfor %}
+</div>
 
-        log_div.append(date_div);
-        // append weather
-        if (log['weather']) {
-            var weather_summary_div = $('<div class="weather_summary"></div>');
-            weather_summary_div.append('<div class="weather_city">' + log["weather"]["city"] + "</div>");
-            weather_summary_div.append('<div class="weather_condition">' + log["weather"]["condition"] + "</div>");
-            weather_div.append(weather_summary_div);
-
-            var weather_detail_div = $('<div class="weather_detail"></div>');
-            weather_detail_div.append('<div class="weather_wind">' + log["weather"]["wind"] + "</div>");
-            weather_detail_div.append('<div class="weather_pm25">空气质量指数：' + log["weather"]["pm25"] + "</div>");
-            weather_detail_div.append('<div class="weather_temperature">气温：' + log["weather"]["temperature"] + "</div>");
-            weather_div.append(weather_detail_div);
-            log_div.append(weather_div);
-        }
-
-        // append all news
-        if (log['news']) {
-            news_title_div = $('<div class="subtitle"></div>');
-            news_title_div.append('<a href="' + log['news']['link'] + '" target="_blank"> 来自喷嚏图卦的新闻 </a>');
-            news_div.append(news_title_div);
-
-            var ul_div = $('<ul class="news_list"></ul>');
-            for (var j in log['news']['titles']) {
-                var news_entry = log['news']['titles'][j]
-                ul_div.append($('<li></li>').text(news_entry));
-            }
-            news_div.append(ul_div);
-            log_div.append(news_div);
-        }
-        // append log items
-        if (log['logs'] && log['logs'].length > 0) {
-            log_div.append('<div class="subtitle">我的记录</div>');
-            var ul_div = $('<ul class="logs_list"></ul>')
-            for (var j in log['logs']) {
-                var log_entry = log['logs'][j];
-                ul_div.append($('<li></li>').text(log_entry))
-            }
-            log_items_div.append(ul_div);
-        }
-
-        log_div.append(log_items_div);
-
-        $('#logs').append(log_div);
-    }
-}
-
-function load_logs() {
-    $.get('/autolog/v1/logs', type='GET').done(function(data) {
-        show_logs(data["logs"])
-    });
-}
-
-$(document).ready(function() {
-    load_logs();
-});
-
-</script>
 {% endblock %}
