--- a/src/templates/boilerplate.html
+++ b/src/templates/boilerplate.html
@@ -1,18 +1,30 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{% block title %} {{title}} {% endblock %}</title>
 
-    <script language="javascript" src="/static/js/jquery-1.8.1.min.js" ></script>
-    <link rel="stylesheet" type="text/css" href="/static/css/autolog.css">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <!-- Bootstrap -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script language="javascript" src="/static/js/jquery-1.8.1.min.js" ></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block header_extra %}
     {% endblock %}
-</head>
-<body>
+  </head>
+  <body>
     {% block content %}
     {% endblock %}
-</body>
+  </body>
 </html>
