--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,57 +1,66 @@
 {% extends "boilerplate.html" %}
 
 {% block content %}
-<h1>{{title}}</h1>
 
-<div class="copyright">
-    作者<a href="mailto:trent.zhou@qq.com">Trent Zhou</a>。
-    开放<a href="https://github.com/trentzhou/autolog">源代码</a>。
-</div>
+<div class="container" role="main">
 
-<div id="logs">
-    {% for log in logs %}
-    <div class="log weekday-{{log['weekday']}}">
-        <div class="log_date section">{{log['date']}} {{log['weekday_text']}}</div>
-        {% if log['weather'] %}
-        <div class="weather section">
-            <span class="weather_city">{{log['weather']['city']}}</span>
-            <span style="color:{{log['weather']['pm25_color']}}">
-                {{log['weather']['condition']}}
-                空气质量指数{{log['weather']['pm25']}}
-            </span>
-            {{log['weather']['wind']}} {{log['weather']['temperature']}}
-        </div>
-        {% endif %}
+    <div class="jumbotron">
+        <h1>{{title}}</h1>
 
-        {% if log['news'] %}
-        <div class="news section">
-            <div class="subtitle">
-                <a href="{{log['news']['link']}}" target="_blank">
-                    来自喷嚏图卦的新闻
-                </a>
-            </div>
-            {% if log['news']['titles'] %}
-            <ul>
-                {% for title in log['news']['titles'] %}
-                <li>{{title}}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
-        {% endif %}
-
-        {% if log['logs'] %}
-        <div class="logs section">
-            <div class="subtitle">我的记录</div>
-            <ul>
-                {% for msg in log['logs'] %}
-                <li>{{msg}}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        {% endif %}
+        <p>
+        作者<a href="mailto:trent.zhou@qq.com">Trent Zhou</a>。
+        开放<a href="https://github.com/trentzhou/autolog">源代码</a>。
+    </p>
     </div>
-    {% endfor %}
-</div>
+
+    <div id="logs">
+        {% for log in logs %}
+        <div class="panel panel-default">
+            <div class="panel-heading"><h2>{{log['date']}} {{log['weekday_text']}}</h2></div>
+            <div class="panel-body">
+                {% if log['weather'] %}
+                <h3>
+                    <span class="label label-primary">{{log['weather']['city']}}</span>
+                    <span class="label label-{{log['weather']['pm25_level']}}">
+                        {{log['weather']['condition']}}
+                        空气质量指数{{log['weather']['pm25']}}
+                    </span>
+                </h3>
+
+                <p>{{log['weather']['wind']}} {{log['weather']['temperature']}}</p>
+                {% endif %}
+
+                {% if log['news'] %}
+                <div class="news section">
+                    <h3>
+                        <a href="{{log['news']['link']}}" target="_blank">
+                            来自喷嚏图卦的新闻
+                        </a>
+                    </h3>
+                    {% if log['news']['titles'] %}
+                    <ul class="list-group">
+                        {% for title in log['news']['titles'] %}
+                        <li class="list-group-item">{{title}}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
+                {% endif %}
+
+                {% if log['logs'] %}
+                <div class="logs section">
+                    <h3>我的记录</h3>
+                    <ul class="list-group">
+                        {% for msg in log['logs'] %}
+                        <li class="list-group-item">{{msg}}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div> <!-- container -->
 
 {% endblock %}
