--- a/src/templates/new.html
+++ b/src/templates/new.html
@@ -1,14 +1,22 @@
 {% extends "boilerplate.html" %}
 {% block content %}
 
-<form>
-    Post magic: <br/> <input type="text" id="post_magic" /> <br/>
-    Message:<br/> <textarea cols="50" id="msg"></textarea> <br/>
+<div class="container">
+    <h2 class="form-signin-heading">Please input the message</h2>
+    <form class="form-signin">
+        <label for="msg" class="sr-only">Message</label>
+        <textarea cols="50" id="msg" class="form-control" placeholder="Message" required></textarea>
 
-    <button onclick="submit_post()">New post</button>
-</form>
+        <label for="post_magic" class="sr-only">Post magic</label>
+        <input class="form-control" placeholder="Post magic" required autofocus type="text" id="post_magic" /> <br/>
 
+        <a href="/" class="btn btn-primary btn-block col-md-6">View</a>
+        <button class="btn btn-primary btn-block col-md-6" onclick="submit_post()">New post</button>
+    </form>
+</div>
 <script>
+
+
 function submit_post() {
     var magic = $('#post_magic').val();
     var msg = $('#msg').val();
@@ -17,7 +25,8 @@ function submit_post() {
         'msg': msg
     };
     $.post('/autolog/v1/logs', JSON.stringify(data), function () {
-        window.location = '/';
+        // nothing
+        alert("OK");
     });
 }
 </script>
